<resources>
    <string name="app_name" translatable="false">NASAPictureOfTheDay</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Find in Wiki</string>
    <string name="wiki_helper_text">Search for the term on wikipedia</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="favourite" translatable="false">Search</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="chose_theme">Chose theme</string>
    <string name="theme_day">Theme day</string>
    <string name="theme_night">Theme night</string>
    <string name="theme_space">Theme space</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="help">Help</string>
    <string name="theme" translatable="false">theme</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="planets">Planets</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="aa" translatable="false">aA</string>
    <string name="chose_size_text">Chose size text</string>
    <string name="size_text" translatable="false">size_text</string>
    <string name="about_photo">About photo</string>
    <string name="notes">Notes</string>
    <string name="header">Notes</string>
    <string name="label_simple_dialog">label_simple_dialog</string>
    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="msg_enter_details">New note</string>
    <string name="label_submit">OK</string>
    <string name="error_null_text">Empty title</string>
    <string name="label_logout" translatable="false">label_logout</string>
    <string name="msg_logout" translatable="false">msg_logout</string>
    <string name="note_title">Note title</string>
    <string name="note_text">Note text</string>
    <string name="lorem_ipsum" translatable="false">test</string>
</resources>