<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noteDialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_enter_details"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleNoteInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteDialogTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleNoteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textNoteInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_text"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNoteInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNoteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNoteInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>