<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top_med"
        android:gravity="center"
        android:text="@string/chose_theme"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top_med"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_theme"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_day" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_space" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top_med"
        android:gravity="center"
        android:text="@string/chose_size_text"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <Button
        android:id="@+id/button_small_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top_small"
        android:layout_marginTop="4dp"
        android:text="@string/aa"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toStartOf="@+id/button_med_size_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_size_text" />

    <Button
        android:id="@+id/button_med_size_text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aa"
        android:textSize="@dimen/text_size_med"
        app:layout_constraintEnd_toStartOf="@+id/button_big_size_text"
        app:layout_constraintStart_toEndOf="@+id/button_small_size_text"
        app:layout_constraintTop_toTopOf="@+id/button_small_size_text" />

    <Button
        android:id="@+id/button_big_size_text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aa"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_med_size_text"
        app:layout_constraintTop_toTopOf="@+id/button_med_size_text" />

</androidx.constraintlayout.widget.ConstraintLayout>