<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_layout_wiki"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/PaddingStartEnd"
            app:layoutDescription="@xml/motion_scene_pod">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/wiki_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="16dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_layout"
                app:srcCompat="@drawable/ic_wikipedia" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_wiki"
                app:counterEnabled="true"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintBottom_toTopOf="@+id/image_pod_view"
                app:layout_constraintStart_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/circularProgressbar_POD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:max="100"
            android:progress="50"
            android:secondaryProgress="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

            <com.szareckii.nasapictureoftheday.util.EquilateralImageView
                android:id="@+id/image_pod_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_no_photo_vector" />

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/bottom_sheet_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>